syntax = "proto3";

import "google/protobuf/empty.proto";
import "product.proto";
import "owner.proto";

package order;

message SimpleProduct {
  string id = 1;
  int32 quantity = 2;
}

// The Order message
message Order {
  string id = 1;
  string owner = 2;
  repeated SimpleProduct products = 3;
  int32 quantity = 4;
  float amount = 5;
  string status = 6;
  string shippingAddress = 7;
  string billingAddress = 8;
  string paymentMethod = 9;
  string paymentStatus = 10;
  string deliveryDate = 11;
  string customerNotes = 12;
  map<string, product.SimpleProduct> productsCache = 13;
  string createdAt = 14;
  string updatedAt = 15;
}

message CreateOrderRequest {
  string ownerId = 1;
  string shippingAddress = 4;
  string billingAddress = 5;
  string paymentMethod = 6;
  string customerNotes = 7;
  string deliveryDate = 8;
  repeated SimpleProduct products = 9;
}

message UpdateOrderRequest {
  string id = 1;
  string status = 2;
  string paymentStatus = 3;
}

// all orders that a owner has made
message GetMyOrdersRequest {
  string ownerId = 1;
}

// all orders that a owner has made for a product
message GetProductOwnerOrdersRequest {
  string ownerId = 1;
  string productId = 2;
}

message GetMySingleOrderRequest {
  string ownerId = 1;
  string orderId = 2;
}

message GetProductOrdersRequest {
  string productId = 1;
}

message GetOrdersResponse {
  string message = 1;
  repeated Order orders = 2;
  bool success = 3;
}

// The service definition for OrderService
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetMyOrders(GetMyOrdersRequest) returns (GetOrdersResponse);
  rpc GetMySingleOrder(GetMySingleOrderRequest) returns (Order);
  rpc GetProductOrders(GetProductOrdersRequest) returns (GetOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (Order);
}
