syntax = "proto3";

import "google/protobuf/empty.proto";
import "user.proto";

package product;

// The Product message
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string userId = 5;
  int32 quantity = 6;
  repeated string images = 7;
  repeated string tags = 8;
  string category = 9;
  user.User user = 10;
}

// The request message containing the product ID
message GetProductRequest {
  string id = 1;
}

// The response message containing the product details
message GetProductResponse {
  Product product = 1;
}

message GetProductsResponse {
  string message = 1;
  repeated Product products = 2;
  bool success = 3;
}

// The service definition for ProductService
service ProductService {
  rpc CreateProduct(Product) returns (Product);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc DeleteProduct(GetProductRequest) returns (google.protobuf.Empty);
  rpc GetProducts(google.protobuf.Empty) returns (GetProductsResponse);
  rpc UpdateProduct(Product) returns (Product);
}
